@@ -261,52 +261,65 @@ void s32tou16x(int32 *lp, int32 c)
 
 void s32tos24(int32 *lp, int32 c)
 {
-	int32 l, i, *sp = (int32 *)(lp);
+	uint8 *sp = (uint8 *)(lp);
+	int32 l, i;
 
 	for(i = 0; i < c; i++)
 	{
 		l = (lp[i]) >> (32 - 24 - GUARD_BITS);
-		sp[i] = (l > MAX_24BIT_SIGNED) ? MAX_24BIT_SIGNED
+		l = (l > MAX_24BIT_SIGNED) ? MAX_24BIT_SIGNED
 				: (l < MIN_24BIT_SIGNED) ? MIN_24BIT_SIGNED : l;
+		*sp++ = l >> 16;
+		*sp++ = l >> 8 & 0xFF;
+		*sp++ = l & 0xFF;
 	}
 }
 
 void s32tou24(int32 *lp, int32 c)
 {
-	int32 l, i, *sp = (uint32 *)(lp);
+	uint8 *sp = (uint8 *)(lp);
+	int32 l, i;
 
 	for(i = 0; i < c; i++)
 	{
 		l = (lp[i]) >> (32 - 24 - GUARD_BITS);
 		l = (l > MAX_24BIT_SIGNED) ? MAX_24BIT_SIGNED
 				: (l < MIN_24BIT_SIGNED) ? MIN_24BIT_SIGNED : l;
-		sp[i] = 0x800000 ^ (uint32)(l);
+		*sp++ = l >> 16 ^ 0x80;
+		*sp++ = l >> 8 & 0xFF;
+		*sp++ = l & 0xFF;
 	}
 }
 
 void s32tos24x(int32 *lp, int32 c)
 {
-	int32 l, i, *sp = (int32 *)(lp);
+	uint8 *sp = (uint8 *)(lp);
+	int32 l, i;
 
 	for(i = 0; i < c; i++)
 	{
 		l = (lp[i]) >> (32 - 24 - GUARD_BITS);
 		l = (l > MAX_24BIT_SIGNED) ? MAX_24BIT_SIGNED
 				: (l < MIN_24BIT_SIGNED) ? MIN_24BIT_SIGNED : l;
-		sp[i] = XCHG_LONG(l);
+		*sp++ = l & 0xFF;
+		*sp++ = l >> 8 & 0xFF;
+		*sp++ = l >> 16;
 	}
 }
 
 void s32tou24x(int32 *lp, int32 c)
 {
-	int32 l, i, *sp = (uint32 *)(lp);
+	uint8 *sp = (uint8 *)(lp);
+	int32 l, i;
 
 	for(i = 0; i < c; i++)
 	{
 		l = (lp[i]) >> (32 - 24 - GUARD_BITS);
 		l = (l > MAX_24BIT_SIGNED) ? MAX_24BIT_SIGNED
 				: (l < MIN_24BIT_SIGNED) ? MIN_24BIT_SIGNED : l;
-		sp[i] = XCHG_LONG(0x800000 ^ (uint32)(l));
+		*sp++ = l & 0xFF;
+		*sp++ = l >> 8 & 0xFF;
+		*sp++ = l >> 16 ^ 0x80;
 	}
 }
 
