@@ -1,3 +1,9 @@
+2004-02-11  Kentaro Sato <kentaro@ranvis.com>
+
+	* timidity/aiff_a.c, timidity/au_a.c, timidity/mac_a.c,
+	  timidity/output.c, timidity/raw_a.c, timidity/wave_a.c
+	  Fixes for 24-bit output.
+
 2004-02-11  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* timidity/timidity.c: Fix some codes for 24bit output
